[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/CardEditor.gd" type="Script" id=2]

[node name="CardEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 4.0
margin_right = 48.0
margin_bottom = 41.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 46.0
margin_right = 227.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnPlayed" type="Button" parent="VBoxContainer"]
margin_right = 223.0
margin_bottom = 36.0
text = "On Played"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 223.0
margin_bottom = 76.0
text = "filler"

[node name="Save" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 223.0
margin_bottom = 116.0
text = "Save Card"

[node name="CardTitle" type="LineEdit" parent="."]
margin_left = 53.0
margin_right = 226.0
margin_bottom = 39.0
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 237.0
margin_top = 1.0
margin_right = 480.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 98.0
margin_bottom = 36.0

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 36.0
text = "Draw Card"

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_Save_pressed"]
